err.txt
g++ -std=c++11 -Imasstree-beta -Ithird-party/xxHash -Ilib -Isto-core -Ilegacy -Idatatype -Ibenchmark  -W -Wall -Wextra -O3 -g -MD -MF .deps/unit-tart.d -MP -include config.h -c -o obj/unit-tart.o test/unit-tart.cc
In file included from datatype/TART.hh:10:0,
                 from test/unit-tart.cc:7:
datatype/ART.hh: In function ‘void insertNode256(Node256*, Node**, uint8_t, Node*)’:
datatype/ART.hh:379:27: warning: unused parameter ‘nodeRef’ [-Wunused-parameter]
                    Node** nodeRef,
                           ^~~~~~~
In file included from test/unit-tart.cc:7:0:
datatype/TART.hh: In member function ‘std::pair<bool, long unsigned int> TART::transGet(TART::Key)’:
datatype/TART.hh:27:23: error: no matching function for call to ‘TART::lock(TART::version_type&)’
             lock(vers_);
                       ^
datatype/TART.hh:40:10: note: candidate: virtual bool TART::lock(TransItem&, Transaction&)
     bool lock(TransItem& item, Transaction& txn) override {
          ^~~~
datatype/TART.hh:40:10: note:   candidate expects 2 arguments, 1 provided
datatype/TART.hh:29:54: error: cannot convert ‘Node’ to ‘Node*’ for argument ‘1’ to ‘Node* lookup(Node*, uint8_t*, unsigned int, unsigned int, unsigned int)’
             Value val = lookup(search.second, k, 4, 4);
                                                      ^
datatype/TART.hh:31:25: error: no matching function for call to ‘TART::unlock(TART::version_type&)’
             unlock(vers_);
                         ^
datatype/TART.hh:50:10: note: candidate: virtual void TART::unlock(TransItem&)
     void unlock(TransItem& item) override {
          ^~~~~~
datatype/TART.hh:50:10: note:   no known conversion for argument 1 from ‘TART::version_type {aka TVersion}’ to ‘TransItem&’
In file included from sto-core/Sto.hh:7:0,
                 from test/unit-tart.cc:6:
sto-core/TWrapped.hh: In instantiation of ‘TWrapped<T, true, true, Small>::TWrapped(Args&& ...) [with Args = {}; T = Node; bool Small = false]’:
datatype/TART.hh:12:7:   required from here
sto-core/TWrapped.hh:380:41: error: no matching function for call to ‘Node::Node()’
         : v_(std::forward<Args>(args)...) {
                                         ^
In file included from datatype/TART.hh:10:0,
                 from test/unit-tart.cc:7:
datatype/ART.hh:28:5: note: candidate: Node::Node(int8_t)
     Node(int8_t type) : count(0), type(type) {}
     ^~~~
datatype/ART.hh:28:5: note:   candidate expects 1 argument, 0 provided
datatype/ART.hh:24:8: note: candidate: constexpr Node::Node(const Node&)
 struct Node {
        ^~~~
datatype/ART.hh:24:8: note:   candidate expects 1 argument, 0 provided
datatype/ART.hh:24:8: note: candidate: constexpr Node::Node(Node&&)
datatype/ART.hh:24:8: note:   candidate expects 1 argument, 0 provided
GNUmakefile:169: recipe for target 'obj/unit-tart.o' failed
make: *** [obj/unit-tart.o] Error 1
